✨ Complete migration from Bun SQL to Prisma ORM
Major refactoring to use Prisma Client throughout the application.

Database Layer:
- Set up Prisma 7.4.1 with multi-file schema organization
- Created 8 domain-organized schema files (user, lead, hunt, etc.)
- Configured for Bun runtime with driverAdapters
- Added Prisma helper utilities for common operations
- Removed deprecated Bun SQL connection pooling (had known leaks)

Schema Features:
- 24 models with full relationship mapping
- 11 enums for type safety
- Composite indexes for performance
- Proper cascade delete configurations
- JSONB and array type support

Services Converted:
- Auth service (login, register, verification)
- User service (CRUD, moderation, API keys)
- Lead query service (complex filters, JSONB operations, stats)
- Lead hunt service (hunt sessions, progress tracking)
- Lead audit service (audit sessions, transactions)
- Email service (outreach, templates, follow-ups)
- Import/export service (CSV handling)

Workers Converted:
- Domain finder worker (bulk lead creation)
- Local business hunt worker (batch upserts with 500ms delay)
- Lead audit worker (website auditing)
- Lead extraction worker (API integrations)

Backend Updates:
- TRPC context now provides Prisma client
- Job monitor using Prisma queries
- Health checks updated for Prisma
- Worker registration system refactored

Docker Integration:
- Backend Dockerfile runs prisma:generate in builder
- Backend CMD runs prisma:push before starting
- Frontend Dockerfile generates Prisma Client
- DATABASE_URL passed as build arg

Performance Improvements:
- Proper connection pooling (max: 40, idle: 20s, timeout: 5s)
- Batch operations with delays to prevent exhaustion
- Worker concurrency: 1 (one hunt at a time)
- Batch size: 50 leads (down from 200)
- Delay between batches: 500ms (up from 100ms)

Breaking Changes:
- Removed Bun SQL template literal queries
- All database access now through Prisma Client
- Raw SQL only used for complex PostgreSQL f

--- a/apps/backend/Dockerfile
+++ b/apps/backend/Dockerfile
@@ -31,6 +31,11 @@ WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
 COPY . .
 
+ARG DATABASE_URL
+ENV DATABASE_URL=$DATABASE_URL
+
+RUN cd packages/database && bun run prisma:generate
+
 FROM base AS runner
 WORKDIR /app
 
@@ -49,4 +54,4 @@ USER backend
 
 EXPOSE 3001
 
-CMD ["bun", "run", "apps/backend/src/index.ts"]
+CMD sh -c "cd packages/database && bun run prisma:push && cd ../.. && bun run apps/backend/src/index.ts"
