--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -4,15 +4,21 @@
   "private": true,
   "type": "module",
   "exports": {
-    ".": "./src/index.ts"
+    ".": "./src/index.ts",
+    "./utils/prisma-helpers": "./src/utils/prisma-helpers.ts"
   },
   "scripts": {
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "prisma:generate": "prisma generate --schema=./prisma/schema",
+    "prisma:migrate": "prisma migrate dev",
+    "prisma:push": "prisma db push",
+    "prisma:studio": "prisma studio"
   },
-
   "dependencies": {
+    "@prisma/client": "^7.4.1",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.3",
+    "prisma": "^7.4.1",
     "zod": "^3.24.1"
   },
   "devDependencies": {
